Initial commit update the algorithm of screen position

--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,13 @@ code {
   position:absolute;
   transition: all 300ms ease-in-out;
 }
+
+html,body {
+  margin :0px;
+  padding :0px;
+  height: 100%;
+}
+
+#root{
+  height: 100vh;
+}
