--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,10 @@ code {
   border: 1px solid red;
   box-sizing: border-box;
   position: relative;
+  overflow: hidden;
 }
 
 .content{
-  border : 1px solid blue;
   box-sizing: border-box;
   position:absolute;
   transition: all 300ms ease-in-out;
