--- a/src/index.css
+++ b/src/index.css
@@ -12,17 +12,19 @@ code {
     monospace;
 }
 
-.viewport{
-  border: 1px solid red;
-  box-sizing: border-box;
-  position: relative;
-  overflow: hidden;
-}
-
 .content{
+  border : 1px solid blue;
+  background-color: aqua;
   box-sizing: border-box;
   position:absolute;
   transition: all 300ms ease-in-out;
+}
+.content::after{
+  background-color: black;
+  top : 0px;
+  left : 0px;
+  width: 100%;
+  height: 100%;
 }
 
 html,body {
